--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 script:
 - mkdir build-travis
 - cd build-travis
-- cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX
+- cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DSIMPLE_SOCKET_TEST=ON
 - make -j3
 - ./Simple-Socket-tester.run
       
@@ -69,3 +69,17 @@ jobs:
     after_success:
     - gem install coveralls-lcov
     - coveralls-lcov Simple-Socket-Coverage.info.cleaned
+  
+  - stage: "Legacy"
+    addons:
+      apt:
+        sources:
+        - ubuntu-toolchain-r-test
+        packages:
+        - g++-5
+    env:
+    - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+    script:
+    - mkdir build-travis
+    - cd build-travis
+    - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DSIMPLE_SOCKET_EXAMPLES=OFF
