--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,8 @@ FILE(GLOB HTTP_SOURCE "examples/http/*")
 OPTION(BUILD_SHARED_LIBS "Build Simple-Socket as a shared library." OFF)
 OPTION(SIMPLE_SOCKET_EXAMPLES "Build the examples" ON)
 OPTION(SIMPLE_SOCKET_TEST "Build the tester" OFF)
+OPTION(SIMPLE_SOCKET_COVERAGE "Build the tester" OFF)
+mark_as_advanced(SIMPLE_SOCKET_TEST SIMPLE_SOCKET_COVERAGE)
 
 # Build the lib and install into configured prefix
 ADD_LIBRARY(Simple-Socket ${SIMPLE_SOCKET_SOURCES} ${DATA_FILE})
@@ -111,7 +113,8 @@ endif()
 if(SIMPLE_SOCKET_TEST)
     ENABLE_TESTING()
 
-    if(CMAKE_COMPILER_IS_GNUCXX AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_GREATER "7"
+    if( SIMPLE_SOCKET_COVERAGE
+    AND CMAKE_COMPILER_IS_GNUCXX AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_GREATER "7"
     AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS "8" )
         include(CodeCoverage)
         APPEND_COVERAGE_COMPILER_FLAGS()
