separating coverage from tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 - cd build-travis
 - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DUSE_LIBCXX=ON  -DSIMPLE_SOCKET_TEST=ON
 - make -j3
-- ./Simple-Socket-tester.run
+- ./Simple-Socket-Tester.run
       
 jobs:
   include:
@@ -73,8 +73,8 @@ jobs:
     script:
     - mkdir build-travis
     - cd build-travis
-    - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DCMAKE_BUILD_TYPE=Debug -DSIMPLE_SOCKET_TEST=ON -DSIMPLE_SOCKET_COVERAGE=ON
-    - make Simple-Socket-Coverage
+    - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DCMAKE_BUILD_TYPE=Debug -DSIMPLE_SOCKET_COVERAGE=ON
+    - make coverage
     after_success:
     - gem install coveralls-lcov
     - coveralls-lcov Simple-Socket-Coverage.info.cleaned
