using target_compile_options for modern cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,12 +15,12 @@ endif()
 # OS and compiler checks.
 if(UNIX)
     add_definitions(-D_LINUX)
-    add_compile_options(-Wall -Wextra)
     set(CMAKE_CXX_STANDARD 17)
     set(CMAKE_CXX_STANDARD_REQUIRED ON)
     set(CMAKE_CXX_EXTENSIONS OFF)
     set(CMAKE_EXECUTABLE_SUFFIX .run)
     set(THREAD_LIB pthread)
+    set(WARNING_FLAGS -Wall -Wextra)
 
     if(CMAKE_BUILD_TYPE MATCHES Debug)
       add_compile_options(-g -D_DEBUG)
@@ -45,9 +45,10 @@ if(UNIX)
 elseif(WIN32)
     add_definitions(-D_WIN32)
     set(PROJECT_LIBS Ws2_32.lib)
+    set(WARNING_FLAGS /W4)
 
     if(MSVC)
-        add_compile_options(/std:c++17 -W4)
+        add_compile_options(/std:c++17)
     else()
         message( FATAL_ERROR "Using unknown WIN32 compiler... NOT. Please add to build system." )
     endif()
@@ -73,17 +74,18 @@ option(BUILD_SHARED_LIBS "Build Simple-Socket as a shared library." OFF)
 option(USE_LIBCXX "Build using libc++ as the standard library when using clang." OFF)
 option(SIMPLE_SOCKET_EXAMPLES "Build the examples" ON)
 option(SIMPLE_SOCKET_TEST "Build the tester" OFF)
-option(SIMPLE_SOCKET_COVERAGE "Build the tester" OFF)
+option(SIMPLE_SOCKET_COVERAGE "Build the tester for code coverage" OFF)
 mark_as_advanced(SIMPLE_SOCKET_TEST SIMPLE_SOCKET_COVERAGE)
 
 # Build the lib and install into configured prefix
 add_library(Simple-Socket ${SIMPLE_SOCKET_SOURCES} ${DATA_FILE})
+target_compile_options(Simple-Socket INTERFACE ${WARNING_FLAGS})
+target_link_libraries(Simple-Socket ${PROJECT_LIBS})
+set_target_properties(Simple-Socket PROPERTIES VERSION ${BUILD_VERSION} SOVERSION ${BUILD_MAJOR})
 install(TARGETS Simple-Socket
         RUNTIME DESTINATION bin
         ARCHIVE DESTINATION lib )
 install(FILES ${SIMPLE_SOCKET_HEADERS} DESTINATION include)
-target_link_libraries(Simple-Socket ${PROJECT_LIBS})
-set_target_properties(Simple-Socket PROPERTIES VERSION ${BUILD_VERSION} SOVERSION ${BUILD_MAJOR})
 
 # Examples
 if(SIMPLE_SOCKET_EXAMPLES)
@@ -107,6 +109,7 @@ endif()
 if(SIMPLE_SOCKET_TEST)
     enable_testing()
     add_executable(Simple-Socket-Tester ${TESTER_SOURCES})
+    target_compile_options(Simple-Socket-Tester PRIVATE ${WARNING_FLAGS})
     target_link_libraries(Simple-Socket-Tester Simple-Socket ${THREAD_LIB})
     add_test(NAME Socket-Tester COMMAND Simple-Socket-Tester)
 endif()
@@ -121,6 +124,7 @@ AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS "8" )
     set(COVERAGE_LCOV_EXCLUDES '*tests/*' '*examples/*' '*7/*')
 
     add_executable(Simple-Socket-Coverage ${TESTER_SOURCES} ${SIMPLE_SOCKET_SOURCES})
+    target_compile_options(Simple-Socket-Coverage PRIVATE ${WARNING_FLAGS})
     target_link_libraries(Simple-Socket-Coverage ${THREAD_LIB} gcov)
     SETUP_TARGET_FOR_COVERAGE_LCOV(NAME coverage EXECUTABLE Simple-Socket-Coverage)
 endif()
