moving coverage to tests cmake

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,13 +1,30 @@
 # Setup source files
+set(TESTER ${PROJECT_NAME}-Tester)
+set(COVERAGE ${PROJECT_NAME}-Coverage)
 set(TESTER_SOURCES "main.cpp" "unicast.cpp" "multicast.cpp")
-set(SIMPLE_SOCKET_TESTER_SOURCES ${TESTER_SOURCES} PARENT_SCOPE)
 
 # Tester
 if(SIMPLE_SOCKET_TEST)
-enable_testing()
-    add_executable(Simple-Socket-Tester ${TESTER_SOURCES})
-    target_include_directories(Simple-Socket-Tester PRIVATE ${PROJECT_SOURCE_DIR}/src)
-    target_compile_options(Simple-Socket-Tester PRIVATE ${WARNING_FLAGS})
-    target_link_libraries(Simple-Socket-Tester Simple-Socket ${THREAD_LIB})
-    add_test(NAME Socket-Tester COMMAND Simple-Socket-Tester)
+    enable_testing()
+    add_executable(${TESTER} ${TESTER_SOURCES})
+    target_include_directories(${TESTER} PRIVATE ${PROJECT_SOURCE_DIR}/src)
+    target_compile_options(${TESTER} PRIVATE ${WARNING_FLAGS})
+    target_link_libraries(${TESTER} Simple-Socket ${THREAD_LIB})
+    add_test(NAME Socket-Tester COMMAND ${TESTER})
+endif()
+
+# Coverage
+if( SIMPLE_SOCKET_COVERAGE
+AND CMAKE_COMPILER_IS_GNUCXX
+AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_GREATER "7"
+AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS "8" )
+    include(CodeCoverage)
+    APPEND_COVERAGE_COMPILER_FLAGS()
+    set(COVERAGE_LCOV_EXCLUDES "*tests/*" "*examples/*" "*7/*")
+
+    add_executable(${COVERAGE} ${TESTER_SOURCES} ${SIMPLE_SOCKET_SOURCES})
+    target_include_directories(${COVERAGE} PRIVATE ${PROJECT_SOURCE_DIR}/src)
+    target_compile_options(${COVERAGE} PRIVATE ${WARNING_FLAGS})
+    target_link_libraries(${COVERAGE} ${THREAD_LIB} gcov)
+    SETUP_TARGET_FOR_COVERAGE_LCOV(NAME coverage EXECUTABLE ${COVERAGE})
 endif()
