--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 - cd build-travis
 - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DUSE_LIBCXX=ON  -DSIMPLE_SOCKET_TEST=ON
 - make -j3
-- ./Simple-Socket-Tester.run
+- ./tests/Simple-Socket-Tester.run
       
 jobs:
   include:
