--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,21 @@ jobs:
       apt:
         sources:
         - ubuntu-toolchain-r-test
+        - llvm-toolchain-trusty-8
+        packages:
+        - clang-8
+        - lldb-8
+        - lld-8
+        - libc++-8-dev
+        - libc++abi-8-dev
+    env:
+    - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8"
+    
+  - os: linux
+    addons:
+      apt:
+        sources:
+        - ubuntu-toolchain-r-test
         - llvm-toolchain-trusty-7
         packages:
         - clang-7
