Removing bad set to compiler flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,10 +81,10 @@ mark_as_advanced(SIMPLE_SOCKET_TEST SIMPLE_SOCKET_COVERAGE)
 # Build the lib and install into configured prefix
 add_library(Simple-Socket ${SIMPLE_SOCKET_SOURCES} ${DATA_FILE})
 target_compile_features(Simple-Socket PUBLIC cxx_std_11)
-set_target_properties(Simple-Socket PROPERTIES CXX_STANDARD 11 CXX_STANDARD_REQUIRED ON COMPILE_FLAGS "${WARNING_FLAGS}")
+set_target_properties(Simple-Socket PROPERTIES CXX_STANDARD 11 CXX_STANDARD_REQUIRED ON)
 if(SIMPLE_SOCKET_STRING_VIEW)
     target_compile_features(Simple-Socket PUBLIC cxx_std_17)
-    set_target_properties(Simple-Socket PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON COMPILE_FLAGS "${WARNING_FLAGS}")
+    set_target_properties(Simple-Socket PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
     target_compile_options(Simple-Socket INTERFACE -DSTRING_VIEW)
 endif()
 target_compile_options(Simple-Socket INTERFACE ${WARNING_FLAGS})
